<resources>
    <string name="app_name">Movies</string>

    <string name="homeFragmentTitle">Home</string>
    <string name="title">Movies Anywhere</string>
    <string name="welcome">Welcome</string>
    <string name="textHome">In this application you can search for any movie you want, you can create your own list of favorite movies and why not, you can create a movie yourself.</string>

    <string name="captureImageFragmentTitle">Capture image</string>
    <string name="camera">Camera</string>
    <string name="share">Share</string>

    <string name="videoPlaybackFragmentTitle">Video Playback</string>

    <string name="jsonMoviesFragment">Search a movie</string>

    <string name="imbd_id">IMBD id:</string>
    <string name="movie_title">Movie title:</string>

    <string name="add_movie_score">Movie score</string>
    <string name="saveButtonText">Save</string>
    <string name="empty_not_saved">Add movie score before add to collection</string>
    <string name="inserted">Movie was successfully inserted</string>
    <string name="updated">Movie was successfully updated</string>


    <string name="favoriteMoviesFragment">Favorite Movies</string>
    <string name="addButtonText">Add movie to collection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>