<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/home"
            android:alpha=".85"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="155dp"
            android:layout_marginBottom="135dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="219dp"
            android:layout_marginBottom="135dp"
            android:text="@string/welcome"
            android:textColor="@color/title"
            android:textSize="30sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <ImageView
        android:layout_width="1000dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:src="@drawable/img"
        android:alpha=".15">
    </ImageView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="bottom"
        android:layout_marginLeft="105dp"
        android:layout_width="300dp"
        android:layout_marginBottom="70dp"
        android:layout_height="85dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="@android:color/transparent">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/textHome"
             android:textColor="@color/black"
             android:textStyle="italic"
             android:padding="10dp"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginLeft="310dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="25dp"
        android:alpha=".45"
        android:text="@string/share"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_700"/>


</FrameLayout>